# CudaSift

./: CMakeLists.txt  CudaSiftConfig.cmake.in  README.md
example/: geomFuncs.cpp  mainSift.cpp
include/cudasift/: cudaImage.h  cudaSift.h  cudaSiftD.cu  cudaSiftH.h  cudautils.h  match.cu
src/: cudaImage.cu  cudaSiftH.cu  matching.cu
